--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,8 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <link href="{% static 'css/github.css' %}" rel="stylesheet" />
+
+        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -20,15 +22,16 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'baseUrl' %}" id="homenavbar">Home</a></li> {% endcomment %}
+                       
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="/blog" id="blognavbar">Blog</a></li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'post-create' %}" id="postnavbar">Post</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}" id="logoutnavbar">Logout</a></li>
-                        {% comment %} {% else %} {% endcomment %}
+                   
                         {% endif %}
                         {% if not request.user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}" id="loginnavbar">Login</a></li>
+                       
+                        <li class="nav-item"> <a class="nav-link" href="{% url 'account_login' %}" id="loginnavbar">Login</a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -38,11 +41,11 @@
         {% endblock content %}
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            {% comment %} <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div> {% endcomment %}
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="{% static "js/highlight.pack.js" %}"></script>
+        <script src="{% static 'js/highlight.pack.js' %}"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
     </body>
