--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -14,9 +14,12 @@
     <div class="col-4 offset-4 mb-5">
         <h3> </h3>
         {{ form.media }}
-        <form action="." method="POST" enctype="multipart/form-data">
+        <form action="." method="POST"  enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
+            <div>
+                <input type="file" multiple accept="image/*" class="form-control-file" name="imagesUpload">
+            </div>
             <button class="btn btn-primary mt-2" type="submit">Submit</button>
         </form>
         
