--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -6,7 +6,7 @@
         <div class="text-center my-5">
             <h1 class="fw-bolder">Search Result for "{{searchText}}"
             </h1>
-            
+
         </div>
     </div>
 </header>
@@ -17,7 +17,7 @@
         <div class="col-lg-8 ">
             {% for object in querysetSearch %}
             <!-- Featured blog post-->
-            
+            <a class="" href="{{ object.get_absolute_url }}" style="text-decoration: none; color: inherit;">
             <div class="card mb-4 bg-ligh " style="background-color: #FAFAFA">
                 {% if object.thumbnail %}
                 <img class="card-img-top" src="{{object.thumbnail.url}}" alt="..."  style="max-height: 20vw; max-width: 20vw;" >
@@ -25,25 +25,25 @@
                 <div class="card-body">
                     <div class="small text-muted">{{object.timestamp|timesince}} ago</div>
                     <div class="small text-muted">Author {{object.author}}</div>
-                    
+
                     <div class="small text-muted">{{object.comments.count}} comment{% if post.comments.count > 1 %}s{% endif %}</div>
                     <h2 class="card-title">{{object.title}}</h2>
-                    <p class="card-text">{{object.overview}}</p>
-                    <a class="btn btn-primary" href="{{ object.get_absolute_url }}">Read more →</a>
+
                 </div>
             </div>
+            </a>
             {% endfor %}
             </div>
             <!-- Pagination-->
             <nav aria-label="Pagination">
                 <hr class="my-0" />
                 <ul class="pagination justify-content-center my-4">
-                    {% if queryset.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?{{ page_request_var }}={{ queryset.previous_page_number }}" tabindex="-1" >Newer</a></li>
-                    {% endif %} 
-                    <li class="page-item active" aria-current="page"><a class="page-link">{{ queryset.number }}</a></li>
-                    {% if queryset.has_next %}
-                    <li class="page-item"><a class="page-link" href="?{{ page_request_var }}={{ queryset.next_page_number }}">Older</a></li>
+                    {% if querysetSearch.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?{{ page_request_var }}={{ querysetSearch.previous_page_number }}" tabindex="-1" >Newer</a></li>
+                    {% endif %}
+                    <li class="page-item active" aria-current="page"><a class="page-link">{{ querysetSearch.number }}</a></li>
+                    {% if querysetSearch.has_next %}
+                    <li class="page-item"><a class="page-link" href="?{{ page_request_var }}={{ querysetSearch.next_page_number }}">Older</a></li>
                     {% endif %}
                 </ul>
             </nav>
