--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -17,7 +17,7 @@
   
   {% if socialaccount_providers %}
   <p>{% blocktrans with site.name as site_name %}Please sign in with one
-  of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+  of your existing third party accounts. Or, <a href="{{ signup-new }}">sign up</a>
   for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   
   <div class="socialaccount_ballot">
@@ -30,11 +30,10 @@
   
   </div>
   
-  {% include "socialaccount/snippets/login_extra.html" %}
   
   {% else %}
-  <p>{% blocktrans %}If you have not created an account yet, then please
-  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+  <p>If you have not created an account yet, then please
+  <a href="{% url 'signup-new' %}">sign up</a> first.</p>
   {% endif %}
   
   
