--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,8 +26,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                       
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="/blog" id="blognavbar">Blog</a></li>
+                        {% if  request.user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="{% url 'profile-update' id=request.user.id %}" id="blognavbar">{{request.user.username}}</a></li>
+                        {% endif %}
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="/blog" id="blognavbar">Home</a></li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'post-create' %}" id="postnavbar">Post</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}" id="logoutnavbar">Logout</a></li>
