--- a/templates/post.html
+++ b/templates/post.html
@@ -1,5 +1,6 @@
 {% extends 'navbar.html' %}
 {% block content %}
+{% load static %}
     <style>
     html,
     body {
@@ -72,10 +73,9 @@
                 <div>
                     <!-- Featured blog post-->
                     <div class="mt-4">
-                        <div class="mx-2 text-capitalize">
+                        <div class="mx-2 ">
                             <p style="font-size: large;">
-                                {{ post.comments.count }} comment
-                                {% if post.comments.count > 1 %}s{% endif %}
+                                {{ post.comments.count }} comment{% if post.comments.count > 1 %}s{% endif %}
                             </p>
                         </div>
                     </div>
@@ -85,8 +85,21 @@
                             <div class="card-body ">
                                 <div class="small text-muted">{{ comment.timestamp|timesince }} ago</div>
                                 <p class="card-text" style="margin-bottom: -0.25%;">
-                                    <strong>{{ comment.user.username }}</strong>:
+                                    {% if comment.get_dp %}
+                                    <img src="{{comment.get_dp.url}}" alt=""  class="rounded-circle" style="width: 30px; height: 30px;">
+                                    {% endif %}
+                                    {% if not comment.get_dp %}
+                                    <img src="/media/profile.png" alt="" class="rounded-circle" style="width: 30px; height: 30px;">
+                                    {% endif %}
+                                    <strong>{% if comment.get_gender == 'MALE' %}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gender-male" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M9.5 2a.5.5 0 0 1 0-1h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0V2.707L9.871 6.836a5 5 0 1 1-.707-.707L13.293 2H9.5zM6 6a4 4 0 1 0 0 8 4 4 0 0 0 0-8z"/>
+                                      </svg>
+                                    {% else %}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gender-female" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M8 1a4 4 0 1 0 0 8 4 4 0 0 0 0-8zM3 5a5 5 0 1 1 5.5 4.975V12h2a.5.5 0 0 1 0 1h-2v2.5a.5.5 0 0 1-1 0V13h-2a.5.5 0 0 1 0-1h2V9.975A5 5 0 0 1 3 5z"/>
+                                      </svg>
+                                    {% endif %} {{ comment.user.username }}</strong>:
                                 </p>
+                                
                                 <p class="card-text pb-0">
                                     {{ comment.content }}
                                 </p>
@@ -128,7 +141,19 @@
                                 <div class="card card-body ml-5 border-0">
                                     <div class="small text-muted">{{ reply.timestamp|timesince }} ago</div>
                                     <p class="card-text" style="margin-bottom: -0.25%;">
-                                        <strong>{{ reply.user.username }}</strong>:
+                                        {% if reply.get_dp %}
+                                    <img src="{{reply.get_dp.url}}" alt="" class="rounded-circle" style="width: 30px; height: 30px;">
+                                    {% endif %}
+                                    {% if not reply.get_dp %}
+                                    <img src="/media/profile.png" alt="" class="rounded-circle" style="width: 30px;">
+                                    {% endif %}
+                                        <strong>{% if reply.get_gender == 'MALE' %}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gender-male" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M9.5 2a.5.5 0 0 1 0-1h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0V2.707L9.871 6.836a5 5 0 1 1-.707-.707L13.293 2H9.5zM6 6a4 4 0 1 0 0 8 4 4 0 0 0 0-8z"/>
+                                          </svg>
+                                        {% else %}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gender-female" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M8 1a4 4 0 1 0 0 8 4 4 0 0 0 0-8zM3 5a5 5 0 1 1 5.5 4.975V12h2a.5.5 0 0 1 0 1h-2v2.5a.5.5 0 0 1-1 0V13h-2a.5.5 0 0 1 0-1h2V9.975A5 5 0 0 1 3 5z"/>
+                                          </svg>
+                                        {% endif %}{{ reply.user.username }}</strong>:
                                     </p>
                                     {{ reply.content }}
                                 </div>
