added remaining features and css edit

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -18,7 +18,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit" class="btn btn-primary my-3">{% trans "Sign Up" %} &raquo;</button>
+  <button type="submit" class="btn btn-primary my-3" style="background-color: #d2d6a8;
+  border: #d2d6a8;">{% trans "Sign Up" %} &raquo;</button>
 </form>
 </div>
 </div>
