--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -20,7 +20,8 @@
             <div>
                 <input type="file" multiple accept="image/*" class="form-control-file" name="imagesUpload">
             </div>
-            <button class="btn btn-primary mt-2" type="submit">Submit</button>
+            <button class="btn btn-primary mt-2" type="submit" style="background-color: #d2d6a8;
+      border: #d2d6a8;">Submit</button>
         </form>
         
     </div>
