--- a/static_in_env/css/styles.css
+++ b/static_in_env/css/styles.css
@@ -65,7 +65,9 @@
 }
 
 
-
+.btn-primary {
+  background-color: #d2d6a8;
+}
 
 *,
 *::before,
@@ -3033,18 +3035,18 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color:#d2d6a8;
+  border-color: #d2d6a8;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  background-color: #d2d6a8;
+  border-color: #d2d6a8;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  background-color: #d2d6a8;
+  border-color: #d2d6a8;
   box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
