--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,7 +3,13 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 {% load account socialaccount %}
-
+<style>
+  .btn-primary {
+      background-color: #d2d6a8;
+      border: #d2d6a8;
+  }
+  
+</style>
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
@@ -44,7 +50,8 @@
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
       {% comment %} <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a> {% endcomment %}
-      <button class="btn btn-primary my-2" type="submit">{% trans "Sign In" %}</button>
+      <button class="btn btn-primary my-2" style="background-color: #d2d6a8;
+      border: #d2d6a8;" type="submit">{% trans "Sign In" %}</button>
     </form>
   </div>
 </div>
