--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -16,7 +16,8 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
-    <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
+    <button type="submit"  class="btn btn-primary mt-2" style="background-color: #d2d6a8;
+    border: #d2d6a8;">{% trans 'Sign Out' %}</button>
   </form>
 
 </div>
