--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:#5c715e;">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -47,7 +47,7 @@
         {% endblock content %}
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            {% comment %} <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div> {% endcomment %}
+            
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
