--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -16,7 +16,8 @@
             {% csrf_token %}
             {{ form|crispy }}
 
-            <button class="btn btn-primary mt-2" type="submit">Save</button>
+            <button class="btn btn-primary mt-2" type="submit" style="background-color: #d2d6a8;
+            border: #d2d6a8;">Save</button>
         </form>
         
     </div>
